OO-6112 fix overflow of edusharing content in description

--- a/src/main/webapp/static/themes/light/modules/_course.scss
+++ b/src/main/webapp/static/themes/light/modules/_course.scss
@@ -115,6 +115,7 @@
 			Otherwise the hole line has the background color.
 		*/
 		.o_text_block {
+			@include clearfix; 
 			display: flex;
 			> div > h5 {
 				padding-bottom: 10px;
